trying to solve the issue of my header floating a few pixels above the bottom on mobile. Can't use emulator, need to push and check on device

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -338,4 +338,8 @@ a:hover {
     margin-right: 20px;
   }
 
+  footer {
+    height: 100%;
+  }
+
 }
